Add generating refresh token

--- a/Rhino.Identity/appsettings.json
+++ b/Rhino.Identity/appsettings.json
@@ -22,8 +22,8 @@
     }
   },
   "ConnectionStrings": {
-    "Identity": "Server=db;Database=rhino_identity;User=root;Password=123456;SslMode=none;AllowPublicKeyRetrieval=True",
-    "Identity1": "Server=localhost;Port=7300;Database=rhino_identity;User=root;Password=123456;SslMode=none;AllowPublicKeyRetrieval=True"
+    //"Identity1": "Server=db;Database=rhino_identity;User=root;Password=123456;SslMode=none;AllowPublicKeyRetrieval=True",
+    "Identity": "Server=localhost;Port=7300;Database=rhino_identity;User=root;Password=123456;SslMode=none;AllowPublicKeyRetrieval=True"
   },
   "Logging": {
     "LogLevel": {
