--- a/Rhino.Identity/appsettings.json
+++ b/Rhino.Identity/appsettings.json
@@ -23,7 +23,7 @@
   },
   "ConnectionStrings": {
     //"Identity1": "Server=db;Database=rhino_identity;User=root;Password=123456;SslMode=none;AllowPublicKeyRetrieval=True",
-    "Identity": "Server=localhost;Port=7300;Database=rhino_identity;User=root;Password=123456;SslMode=none;AllowPublicKeyRetrieval=True"
+    "Identity": "Server=localhost;Port=3306;Database=rhino_identity;User=root;Password=admin;SslMode=none;AllowPublicKeyRetrieval=True"
   },
   "Logging": {
     "LogLevel": {
