--- a/Rhino.MoneyKeeper/appsettings.json
+++ b/Rhino.MoneyKeeper/appsettings.json
@@ -2,8 +2,8 @@
   "Kestrel:Certificates:Development:Password": "a1468d20-445b-49de-bd1a-43e9e15c915e",
   "Authorization": {
     "Rhino": {
-      "ClientId": "Secret123",
-      "ClientSecret": "Client123"
+      "ClientId": "Client123",
+      "ClientSecret": "Secret123"
     }
   },
   "Logging": {
